--- a/Udemy/Secao04/data-binding/package.json
+++ b/Udemy/Secao04/data-binding/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "12": "^1.0.2",
     "@angular/animations": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
@@ -23,7 +24,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.1",
+    "@angular-devkit/build-angular": "^13.3.8",
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
