--- a/Udemy/Secao03_Aula12_Componente/projeto/angular.json
+++ b/Udemy/Secao03_Aula12_Componente/projeto/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": []
           },
